# Deal-Yolo-Daya

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/deal_yolo_data/: app.py  config.py
src/deal_yolo_data/core/: processor.py  training.py  utils.py
src/deal_yolo_data/ui/: components.py  styles.py
src/deal_yolo_data/ui/pages/: processing.py  training.py
