[project]
name = "deal-yolo-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Yzm",email = "yanziming022@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "deal_yolo_data", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
