[project]
name = "deal-yolo-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Yzm",email = "yanziming022@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "pypinyin>=0.55.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "streamlit-tree-select>=0.0.5",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.18",
]

[tool.poetry]
packages = [{include = "deal_yolo_data", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
